# backend/internal/interface/router/aps_object_router.go
@@ -9,4 +9,7 @@ import (
 func SetAPSObjectRoutes(router *mux.Router, handler *aps_object.APSObjectHandler) {
 	// S3署名付きURLの取得
 	router.HandleFunc("/api/v1/aps/buckets/{bucketKey}/objects/signeds3upload", handler.GetS3SignedURLs).Methods("POST")
+	
+	// APSオブジェクトのアップロードシーケンス（署名付きURL取得→アップロード）
+	router.HandleFunc("/api/v1/aps/buckets/{bucketKey}/objects/upload", handler.UploadAPSObjectSequence).Methods("POST")
 }
